--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<a href="Grimesindex.html" class="homenav">Home</a>
+	<a href="index.html" class="homenav">Home</a>
 	<a href="About.html" class="aboutnav" >About</a>
 	<a href="Discography.html" class="disconav">Discography</a>
 	<a href="Gallery.html" class="gallnav">Gallery</a>
