--- a/Discography.html
+++ b/Discography.html
@@ -27,7 +27,7 @@
 	<div class="line4">  </div>
 	<div class="line5">  </div>
 
-	<a href="Grimesindex.html" class="homenav">Home</a>
+	<a href="index.html" class="homenav">Home</a>
 	<a href="About.html" class="aboutnav">About</a>
 	<a href="Discography.html" class="disconav">Discography</a>
 	<a href="Gallery.html" class="gallnav">Gallery</a>
