--- a/Gallery.html
+++ b/Gallery.html
@@ -34,7 +34,7 @@
 <div class="galback">  </div>
 
 <body>
-	<a href="Grimesindex.html" class="homenav">Home</a>
+	<a href="index.html" class="homenav">Home</a>
 	<a href="About.html" class="aboutnav">About</a>
 	<a href="Discography.html" class="disconav">Discography</a>
 	<a href="Gallery.html" class="gallnav">Gallery</a>
