--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <Title>Grimes</Title>
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 <img src= "1x/Asset 7.png" class="twitter">
-<img src="1x/1x/Asset 8.png" class="instagram">
-<img src="1x/1x/Asset 9.png" class="tumblr">
-<img src="1x/1x/1x/Asset 10.png" class="spotify">
-<img src="grimes.jpeg" class="home">
-<img src="1x/1x/1x/Asset 14.png" class="homebottom">
-<img src="1x/1x/1x/1x/1x/colorbar.png" class="indicator">
-<img src="1x/1x/1x/1x/1x/homecircle.png" class="homecircle">
+<img src="1x/Asset 8.png" class="instagram">
+<img src="1x/Asset 9.png" class="tumblr">
+<img src="1x/Asset 10.png" class="spotify">
+<img src="1x/grimes.jpeg" class="home">
+<img src="1x/Asset 14.png" class="homebottom">
+<img src="1x/colorbar.png" class="indicator">
+<img src="1x/homecircle.png" class="homecircle">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Goldman&display=swap');
 </style>
