--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
 <img src="about.jpeg" class="abpic">
 <img src="1x/elon.jpeg" class="elon">
 <img src="1x/albumabout.jpeg" class="art">
-<img src="1x/1x/1x/1x/1x/colorbar.png" class="indicator2">
+<img src="1x/colorbar.png" class="indicator2">
 <img src="1x/Asset 7.png" class="abouttwitter">
 <a link href="https://twitter.com/Grimezsz?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" ><img src= "1x/Asset 7.png" class="abouttwitter"></a>
 <style>
