--- a/Discography.html
+++ b/Discography.html
@@ -9,10 +9,10 @@
 <img src="1x/visions.jpeg" class="visions">
 <img src="1x/artangels.jpg" class="artangels"> 
 <img src="1x/miss.jpeg" class="miss">
-<img src="1x/1x/1x/Asset 17.png" class="alien2">
-<img src="1x/1x/1x/Asset 10.png" class="discoicon">
-<img src="1x/1x/1x/1x/1x/colorbar.png" class="indicator3">
-<a link href="https://open.spotify.com/artist/053q0ukIDRgzwTr4vNSwab"><img src="1x/1x/1x/Asset 10.png" class="discoicon"> </a>
+<img src="1x/Asset 17.png" class="alien2">
+<img src="1x/Asset 10.png" class="discoicon">
+<img src="1x/colorbar.png" class="indicator3">
+<a link href="https://open.spotify.com/artist/053q0ukIDRgzwTr4vNSwab"><img src="1x/Asset 10.png" class="discoicon"> </a>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Goldman&display=swap');
 </style>
