--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
 	<a link href="https://twitter.com/Grimezsz?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src= "1x/Asset 7.png" class="twitter"></a>
 
-	<a link href="https://www.instagram.com/grimes/"><img src="1x/1x/Asset 8.png" class="instagram">
+	<a link href="https://www.instagram.com/grimes/"><img src="1x/Asset 8.png" class="instagram">
 </a>
 
-	<a link href="https://actuallygrimes.tumblr.com/post/180609974514"><img src="1x/1x/Asset 9.png" class="tumblr"></a>
+	<a link href="https://actuallygrimes.tumblr.com/post/180609974514"><img src="1x/Asset 9.png" class="tumblr"></a>
 
-	<a link href="https://open.spotify.com/artist/053q0ukIDRgzwTr4vNSwab"><img src="1x/1x/1x/Asset 10.png" class="spotify"></a>
+	<a link href="https://open.spotify.com/artist/053q0ukIDRgzwTr4vNSwab"><img src="1x/Asset 10.png" class="spotify"></a>
 
 
 	<a href="Grimesindex.html" class="homenav">Home</a>
